<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/title" />

    <Button
        android:id="@+id/buStudents"
        android:onClick="manageStudents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:layout_gravity="center|top"
        android:padding="5dp"
        android:text="@string/buStudents"
        android:textSize="30sp"
        >
    </Button>

    <Button
        android:id="@+id/buCourses"
        android:onClick="manageCourses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:layout_gravity="center|top"
        android:padding="5dp"
        android:text="@string/buCourses"
        android:textSize="30sp"
        >
    </Button>

    <Button
        android:id="@+id/buWL"
        android:onClick="manageWaitList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:layout_gravity="center|top"
        android:padding="5dp"
        android:text="@string/buWaitlist"
        android:textSize="30sp"
        >
    </Button>


</LinearLayout>