<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ManageCourses">

    <TextView
        android:id="@+id/tvCourses"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="28sp"
        android:padding="4dp"
        android:layout_margin="4dp"
        android:textColor="@color/black"
        android:text="@string/mngCourses" />

    <ListView
        android:id="@+id/course_list"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="4"
        android:dividerHeight="1dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0px"
        android:layout_weight="1.5"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/buAddCourse"
            android:onClick="addCourse"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:padding="4dp"
            android:layout_margin="4dp"
            android:text="@string/buAddCourse"
            android:textSize="24sp"
            >
        </Button>

        <Button
            android:id="@+id/buRemCourse"
            android:onClick="removeCourse"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:padding="4dp"
            android:layout_margin="4dp"
            android:text="@string/buRemCourse"
            android:textSize="24sp"
            >
        </Button>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="22sp"
        android:padding="4dp"
        android:textColor="@color/red"
        android:text="@string/remCourseWarn" />
    <Button
        android:id="@+id/buBack"
        android:onClick="back"
        android:layout_width="wrap_content"
        android:layout_height="0px"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginBottom="8sp"
        android:padding="4dp"
        android:layout_margin="4dp"
        android:text="@string/back"
        android:textSize="24sp"
        >
    </Button>

</LinearLayout>